<resources>
    <string name="app_name">Test_Design</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="insert_msg">Insert message here</string>
    <string name="nick">Nickname</string>
    <string name="edit">Edit</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>
    <string name="phone">Phone</string>
    <string name="status">Status</string>
    <string name="add">Add</string>
    <string name="mainintent">Chats</string>
    <string name="secondtent">Settings</string>
    <string name="thirdintent">Constacts</string>
</resources>
